--- a/Index.html
+++ b/Index.html
@@ -150,7 +150,7 @@ h1 {
   </div>
   <section id="section0" class="section0">
     <div class="">
-    <img class="image-container" src="images/background/1.jpg" width="1920px" height="1080px" alt="">
+    <img class="image-container img-responsive" src="images/background/1.jpg" width="1920px" height="1080px" alt="">
     <div class="gradient-overlay"></div>
   </div>
     <div class="col-md-12 col-xs-12 z-index-1000 image-overlay">
@@ -180,7 +180,7 @@ h1 {
         </ul>
       </div>
       <div class="col-md-8">
-        <img src="images/Background/2.jpg " alt="" width="800px" height="350px">
+        <img class="img-responsive" src="images/Background/2.jpg " alt="" width="800px" height="350px">
           <h2 style="padding-top: 30px;">Junior School</h2>
         <p> Junior School offers a challenging and creative curriculum to inspire our pupils to become problem-solvers and to take risks from early in their school careers. All our Junior School pupils gain automatic entry to the Senior School.The Junior School curriculum is a creative one, where boys use their initiative and dare to take risks.</p>
         
@@ -202,7 +202,7 @@ h1 {
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <img src="images/Classes/1.jpg" class="card-img-top" alt="Class Image">
+              <img src="images/Classes/1.jpg" class="card-img-top img-responsive" alt="Class Image">
               <div class="card-body">
                 <h5 class="card-title">Computer Class</h5>
                 <p class="card-text text-space">Computing is taught as a discrete subject in the Junior and Lower Schools, with an increased emphasis on computer science as students progress. Students experience a wide variety of application software, online activity and eSafety, and the principles involved in writing code.</p>
@@ -212,7 +212,7 @@ h1 {
           </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <img src="images/Classes/2.jpg" class="card-img-top" alt="Class Image">
+              <img src="images/Classes/2.jpg" class="card-img-top img-responsive" alt="Class Image">
               <div class="card-body">
                 <h5 class="card-title">Music Class</h5>
                 <p class="card-text text-space">Whether a boy wishes to join one of the three orchestras, play in a jazz group or the big band, sing in one of the three choirs, jam in a rock band or just strum a ukulele, he will be catered for.</p>
@@ -222,7 +222,7 @@ h1 {
           </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <img src="images/Classes/3.jpg" class="card-img-top" alt="Class Image">
+              <img src="images/Classes/3.jpg" class="card-img-top img-responsive " alt="Class Image">
               <div class="card-body">
                 <h5 class="card-title">History</h5>
                 <p class="card-text text-space">We encourage an appreciation of the past, promoting the enjoyment of its rediscovery, and develop the critical skills our boys need to interpret historical sources and foster an appreciation of their cultural heritage.</p>
@@ -234,29 +234,6 @@ h1 {
       </div>
   </div>
   </section>
-<section id="section-my-quote" aria-label="section" class="jarallax no-top no-bottom">
-    <div class="v-center">
-        <div class="container">
-            <div class="col-md-12 text-center wow fadeInUp">
-                <h2>Testimonial</h2>
-                <div class="space-border"></div>
-            </div>
-            <div id="testimonial-carousel" class="owl-carousel owl-theme wow fadeInUp">
-                <blockquote class="testimonial-big text-light">
-                  Each has extensive collections of non-fiction (covering the full range of academic disciplines) and fiction books, along with magazines, periodicals and DVDs. In addition, pupils can access the Accesit library catalogue via their Microsoft Surface devices, to renew and reserve library books.
-                    <img src="images/people/1.jpg" alt=""/>
-                    <span class="name"></span>
-                </blockquote>
-                <blockquote class="testimonial-big text-light">
-                  The ethos of the School is to encourage pupils to aim high and develop their individual passions. Careers education builds upon this to give pupils the best set of skills, knowledge and experience to allow them to thrive in their future careers.
-                    <img src="images/people/2.jpg" alt="" />
-                    <span class="name">Jhon</span>
-                </blockquote>
-            </div>
-        </div>
-    </div>
-    <div class="de-gradient-edge-bottom"></div>
-</section>
   <section class="gradient-overlay section4" id="section4">
     <div class="container">
       <div class="z-index-1000">
